# ml

./: README.md
crawler/changedetection/: README.md  docker-compose.yaml  docker.run
crawler/firecrawl/: .env.temp  README.md  docker-compose.yaml
crawler/node/: package.json
crawler/py/: pyproject.toml
crawler/py/davidkhala/ml/crawler/changedetection/: api.py  watch.py
crawler/py/davidkhala/ml/crawler/firecrawl/: __init__.py
crawler/py/tests/: bs4_test.py  changedetection_test.py  firecrawl_test.py
crawler/searxng/: README.md  docker-compose.yaml
crawler/searxng/config/: settings.yml
