[project]
name = "davidkhala.ml.crawler"
version = "0.1.1"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
firecrawl = [
    "firecrawl"
]
changedetection = [
    "davidkhala-utils[http_request]"
]

[tool.hatch.build.targets.sdist]
include = ["davidkhala"]

[tool.hatch.build.targets.wheel]
include = ["davidkhala"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest"
]